--- a/css/tux-anuncios.styl
+++ b/css/tux-anuncios.styl
@@ -14,230 +14,341 @@
 // Prefijos propietarios
 vendor-prefixes = o ms moz webkit official
 /* Patron de colores App Tux-Anuncios */
-verde-claro = #1fbba6
-gris = #FFFFFF
-gris-obscuro = #CCC
+verde-c = #1ABC9C
+verde-f = #16A085
+limon-c = #2ECC71
+limon-f = #27AE60
+azul-c = #3498DB
+azul-f = #2980B9
+morado-c = #9B59B6
+morado-f = #8E44AD
+acero-c = #34495E
+acero-f = #2C3E50
+amarillo-c = #F1C40F 
+amarillo-f = #F39C12
+naranja-c = #E67E22
+naranja-f = #D35400
+rojo-c = #E74C3C
+rojo-f = #C0392B
+gris-c = #ECF0F1
+gris-f = #BDC3C7
+concreto-c = #95A5A6
+concreto-f = #7F8C8D
 rosa = #CC6699
 rosa-fuerte = #CC3366
-rojo = #A01127
-naranja = #f9ab2e
 celeste = #37cde7
-azul = #336699
+
+
+html,body
+	height 100%
+
 
 body
-	background gris
+	background white
 	font-family Arial
 	font-size 16px
-.btn 
-	border 0
-	color white
-	border-radius 5px
-	font-weight bold
 
-	&.naranja
-		background naranja
-		padding 0.5em 1em
+
+	#wrap 
+		min-height 100%
+
+	#main 
+		overflow auto
+		padding-bottom 50px
 		
+		.anuncio-clasificado
+			// display none
+			padding 0.5em
+			background-color rojo-f
+			overflow hidden
+			text-align center
+			position relative
+			border-bottom 3px solid rgba(255,255,255,0.3)
+			.logo-clasificado
+				width 60px
+				margin 0
+				padding 0
+				img
+					width 50px
+					border-radius 50%
+					border 4px solid rgba(255,255,255,0.3)
+
+			.descripcion-clasificado
+				margin 0 20px 0 70px
+				padding 0.5em 0
+				width 60%
+				p
+					color white
+					font-size 12px
+					font-weight normal
+					text-align justify
+					margin 0
+					padding 0
+			.boton-ir
+				background-color rojo-c
+				width 50px
+				height 100%
+				position absolute
+				top 0
+				right 0
+				a
+					position absolute
+					top 35%
+					left 10px
+					&:before
+						font-family iconos
+						font-size 2em
+						content "\e625"
+		.buscador
+			background azul-c
+			text-align center
+			padding 1em
+			img
+				width 150px
+			input[type="search"]
+				border 0
+				border-radius 8px
+				padding 0.5em 1em
+				margin 0.5em 0
+				transition margin 2s linear 1s
+				&:focus
+					padding 0.5em 1.5em
+			.text-buscador
+				a
+					&:before
+						font-family iconos
+						font-size 1em
+						content "\e609"
+		.login
+			background azul-f
+			text-align center
+			padding-top 1em
+			.inp-login
+				display block
+				
+				
+					
+				
+	#footer 
+		position relative 
+		margin-top -50px /* altura en px del footer con valor negativo */ 
+		height: 50px; /* Altura del Footer en px*/ 
+		clear both 
+		background verde-f 
+		text-align center
+		color white
 header
-	background verde-claro
+	background verde-c
 	border-bottom solid 5px rgba(0,0,0,0.3)
 	color white
 	padding 0.5em
-
 	.logo
 		display inline-block
+		margin 0 0.5em
 		img
-			width 60px
-	.derecha
-		padding 0.5em
+			height 50px
+	.cont-menu
+		float right
+		padding 1em
+a
+	color white
+	text-decoration none
+	transition border .25s
 
-.contenedor
-	
+a:hover,
+a:focus
+	color white
+	text-decoration none
 
-	.anuncio-clasificado
-		display none
-
-	.seccion-cabezera
-		background celeste
-
-		.logo-grande
-			text-align center
-			padding 1em 0 1em 0
-
-			img
-				width 150px
-	.buscador
-		text-align center
-		input
-			border 1.5px dashed  rgba(0,0,0,0.2) 
-			border-radius 5px
-			font-weight bold
-			font-size 0.5em
-			width 60%
-			padding 0.5em
-			margin 0 0 1em 0
-		.buscar
-			text-decoration none
-			color gris
-			&:before
-				font-family iconos
-				font-size 1.5em
-				content "\e609"
-				
-					
-	.titulos
-		margin 1em
-		border-bottom 2px solid verde-claro
-		h2
-			color celeste
-			font-size 1em
-	.empresas-destacadas
-		.ficha-empresa
-			background white
-			border 1px solid gris-obscuro
-			border-radius 5px
-			margin 1em 0.5em
-
-					
-			.ficha-cabezera
-				background verde-claro
-				border-radius 5px 5px 0px 0px
-				text-align center
-				display block
-				margin 0
-
-				img
-					width 50px
-					border 5px solid  rgba(255,255,255,0.3) 
-					border-radius 50%
-					margin 0.5em
-
-				h3
-					color white
-					font-size 0.8em
-					text-align center
-					padding 0 0 1em 0
-					margin 0
-
-			.ficha-menu
-				display block
-				margin 0
-				.caja
-					color white
-					font-size 0.8em
-					width 33.3%
-					display inline-block
-					text-align center
-					
-
-					&.visitas
-						background rosa-fuerte
-						padding-top 1em
-						&:before
-							font-family iconos
-							font-size 1.5em
-							content "\e610"
-						
-					&.favoritos
-						background naranja
-						padding-top 1em
-						&:before
-							font-family iconos
-							font-size 1.5em
-							content "\e611"
-						
-					&.anuncios 
-						background azul
-						padding-top 1em
-						&:before
-							font-family iconos
-							font-size 1.5em
-							content "\e602"
-			.ficha-cuerpo
-				display block
-				margin 0
-				text-align center
-				h2
-					color gris-obscuro
-					margin 0
-					padding 0.5em
-				p 
-					text-align justify
-					padding 0.5em
-				button
-					margin-bottom 0.5em
-footer
-	background verde-claro
-	margin-top 1em
-	font-size 1em
-	text-align center
-	padding 1em
-	h3
+.btn
+	border none
+	border-radius 4px
+	padding 10px 20px
+	font-size 15px
+	font-weight bold
+	line-height 1.4
+	transition border .25s linear, color .25s linear, background-color .25s linear
+	&:hover,
+	&:focus
+		outline none
 		color white
-		margin 0
+.btn-amarillo
+	color white
+	background-color amarillo-c
+.btn-amarillo:hover,
+.btn-amarillo:focus,
+.btn-amarillo:active
+	color white
+	background-color amarillo-f
+	
+.btn-rosa
+	color white
+	background-color rosa-fuerte
+.btn-rosa:hover,
+.btn-rosa:focus,
+.btn-rosa:active
+	color white
+	background-color rosa
+
+.btn-gris
+	color white
+	background-color gris-c
+.btn-gris:hover,
+.btn-gris:focus,
+.btn-gris:active
+	color white
+	background-color gris-f
+
+.btn-azul
+	color white
+	background-color azul-c
+.btn-azul:hover,
+.btn-azul:focus,
+.btn-azul:active
+	color white
+	background-color azul-f
+
+.btn-morado
+	color white
+	background-color morado-c
+.btn-morado:hover,
+.btn-morado:focus,
+.btn-morado:active
+	color white
+	background-color morado-f
+
+.btn-verde
+	color white
+	background-color verde-c
+.btn-verde:hover,
+.btn-verde:focus,
+.btn-verde:active
+	color white
+	background-color verde-f
+
+.btn-limon
+	color white
+	background-color limon-c
+.btn-limon:hover,
+.btn-limon:focus,
+.btn-limon:active
+	color white
+	background-color limon-f
+
+.btn-acero
+	color white
+	background-color acero-c
+.btn-acero:hover,
+.btn-acero:focus,
+.btn-acero:active
+	color white
+	background-color acero-f
+
+.btn-concreto
+	color white
+	background-color concreto-c
+.btn-concreto:hover,
+.btn-concreto:focus,
+.btn-concreto:active
+	color white
+	background-color concreto-f
+
+.btn-rojo
+	color white
+	background-color rojo-c
+.btn-rojo:hover,
+.btn-rojo:focus,
+.btn-rojo:active
+	color white
+	background-color rojo-f
+
+.btn-naranja
+	color white
+	background-color naranja-c
+.btn-naranja:hover,
+.btn-naranja:focus,
+.btn-naranja:active
+	color white
+	background-color naranja-f
 
 .left
 	float left
-
 .right
 	float right
+.cabecera
+	color azul-f
+	margin 0
+	h2
+		margin 0
 
-@media screen and (min-width: 768px)
-	body
-		header
-			.logo
-				img
-					width 80px
-		.contenedor
-			.seccion-cabezera
-				.logo-grande
-					img
-						width 250px
-			
-			.buscador
-				input
-					border 1.5px dashed  rgba(0,0,0,0.2) 
-					border-radius 5px
-					display inline-block
-					font-weight bold
-					font-size 1em
-					height 5px
-					padding 1em
-					margin 2em
-					width 400px
-			.empresas-destacadas
-				.ficha-empresa
-					display inline-block
-					width 45%
-					&:nth-child(odd)
-						margin-left 3%
-						margin-right 2%
-@media screen and (min-width: 1080px)
-			body
-			.btn 
-				&.naranja
-					padding 1em 1.5em
-				header
-					padding 0.8em
-					.logo
-						img
-							width 100px
+.empresas
+	padding 0.5em
+	.empresa
+		border-radius 5px 5px 0 0
+		background white
+		box-shadow 2px 2px 10px rgba(black,0.3)
+		.empresa-cabecera
+			border-radius 5px 5px 0 0
+			background amarillo-f
+			text-align center
+			padding 0.5em 0
+			img
+				width 70px
+				border-radius 50%
+				border 4px solid rgba(white,0.3)
+			h3
+				color white
+				margin 0
+		.menu-empresa
+			background amarillo-f
+			.caja
+				color white
+				font-size 0.8em
+				width 33.3%
+				display inline-block
+				text-align center
+				&.visitas
+					background rosa-fuerte
+					padding-top 1em
+					&:before
+						font-family iconos
+						font-size 1.5em
+						content "\e610"
 						
-				.contenedor
-					text-align center
-					.titulos
-						text-align left
+				&.favoritos
+					background naranja-f
+					padding-top 1em
+					&:before
+						font-family iconos
+						font-size 1.5em
+						box-shadow 
+						content "\e611"
 						
-					.empresas-destacadas
-						 
-						.ficha-empresa
-							font-weight normal
-							display inline-block
-							width 30%
-							&:nth-child(odd)
-								margin-left 1%
-								margin-right 1%
-							.ficha-cabezera
-								img
-									width 80px
-									border 8px solid  rgba(255,255,255,0.3)
+				&.anuncios 
+					background azul-f
+					padding-top 1em
+					&:before
+						font-family iconos
+						font-size 1.5em
+						content "\e602"
+		.descripcion-empresa
+			color gris-f
+			padding 0.5em
+			text-align justify
+		.accion-empresa
+			text-align center
+			padding 1em
+.cabecera
+	padding 1em
+	margin 0
+	border-bottom 1px solid verde-f
+	h3
+		padding 0
+		margin 0
+
+	
+
+
+
+
+	
